# exercicios-python

./: README.md
notebooks/: exercicios.ipynb
projeto_agendamento/: pyproject.toml
projeto_api/: pyproject.toml
projeto_api/src/: main.py  utils.py
projeto_api_logging/: pyproject.toml
projeto_api_logging/src/: main.py  utils.py  utils_using_loguru.py
projeto_banco_dados/: pyproject.toml
projeto_banco_dados/src/: db_operations.py  main.py
projeto_etl/: pyproject.toml
projeto_etl/data/processed/: dados_usuarios_processed.csv
projeto_etl/data/raw/: dados_usuarios_raw.csv
projeto_etl/src/: dados_usuarios.py  main.py  utils.py
projeto_pandas/: pyproject.toml
projeto_pandas/data/raw/: vendas_raw.xlsx
projeto_pandas/src/: gerar_vendas_xlsx.py  main.py  utils.py
projeto_transformacao/: pyproject.toml
projeto_transformacao/src/: gerar_nomes_txt.py  main.py  transformacoes.py
