[tool.poetry]
name = "projeto-transformacao"
version = "0.1.0"
description = ""
authors = ["Bruno Chiconato <brunochiconato01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
faker = "^30.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
